# OpenRLHF

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  FSDP2_IMPLEMENTATION_SUMMARY.md  LAB_EXP.md  LICENSE  README.md  README_cn.md  README_ja.md  README_zh.md  env.sh  pyproject.toml  req_new.txt  requirements-npu.txt  requirements.txt  run_comparison_test.sh  setup.py  test_fsdp2_import.py  train_ppo_ray_hybrid_engine_mi308.sh  version.txt
benchmark/: README.md
custom/: actor.py  experience_maker.py  model.py  ppo_trainer.py  replay_buffer.py  run_ppo.sh  train_ppo.py  utils.py
data/: experience.pt  zero3_init_debug.py
deepspeedchat/: README.md  requirements.txt  setup.py
dockerfile/: Dockerfile  docker-entrypoint.sh
docs/: DIR_README.md  README.md  automodel_migration_plan.md  automodel_porting_recipe_parallelize.md  openllama2_tutorial.md  openrlhf_doc.md  openrlhf_doc_cn.md  openrlhf_doc_pr.md  ppo_examples.md
examples/: README.md  batch_generation.py  batch_inference.py  build_chatgpt.sh  docker_run.sh  inference.py  inference_llama.sh  interactive_chat.py  train_dpo.py  train_kd.py  train_kto.py  train_ppo.py  train_ppo_llama.sh  train_ppo_ray.py  train_rm.py  train_rm_llama.sh  train_sft.py  train_sft_llama.sh  utils.py
openrlhf/: __init__.py
scripts/: gsm_reward.sh  gsm_reward_cpu_only.sh  prepare_lean_data.py  preprocess_data.py  run_grpo_gsm_1b.sh  run_match_rm_server.sh  run_ppo_1.5b.sh  run_ppo_ray.sh  run_ppo_ray_lean.sh  run_ppo_ray_local.sh  start_ray_server.sh  test_flash.py
tests/: README.md  __init__.py  compare_backends.py  run_all_tests.sh  run_comparison_test.sh  test_automodel_attention.py  test_constrained_reward.py  test_experience_maker.py  test_experience_maker_sleep.py  test_fsdp2_autotp.py  test_fsdp2_import.py  test_fsdp2_training.sh  test_fsdp_strategy_checkpoint.py  test_length_penalty.py  test_loss_aggregation.py  test_optimizer_grouped_parameters.py  test_partial_rollout_agent.py  test_ppo_backends.sh  test_ppo_best_checkpoint.py  test_ppo_comparison.sh  test_ppo_eval_utils.py  test_ppo_parallel_dims.py  test_ray_env_vars.py  test_rebel_loss.py  test_response_length.py  test_reward_normalization_semantics.py  test_samples_generator.py  test_sft_dataset_tools.py  (+10 more)
(+465 files in other folders)
